--- a/views/layouts/index-layout.hbs
+++ b/views/layouts/index-layout.hbs
@@ -5,6 +5,7 @@
 	<title>USG</title>
 
 	<link rel="stylesheet" href="./resources/css/index.css" />
+
 	{{>head-part }}
 </head>
 
@@ -13,9 +14,9 @@
 
 	{{{body}}}
 
-	{{>footer-part}}
+	{{> footer-part}}
 
-	{{>bootstrap-script}}
+	{{> bootstrap-part}}
 </body>
 
 </html>
