--- a/resources/css/item-detail.css
+++ b/resources/css/item-detail.css
@@ -1,157 +1,237 @@
 :root {
-	--darkYellow: #ffe4aa;
-	--softOrage: #f26101;
-	--lightTomato: #ff8f89;
-	--sharpPink: #e894e8;
-	--deepViolet: #bd97ff;
-	--skyBlue: #659dbd;
-	--darkBlue: #283657;
+  --darkYellow: #ffe4aa;
+  --softOrage: #f26101;
+  --lightTomato: #ff8f89;
+  --sharpPink: #e894e8;
+  --deepViolet: #bd97ff;
+  --skyBlue: #659dbd;
+  --darkBlue: #283657;
 }
 
 @font-face {
-	font-family: "Montserrat", sans-serif;
-	src: url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap");
+  font-family: "Montserrat", sans-serif;
+  src: url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap");
 }
 
 @font-face {
-	font-family: "Raleway", sans-serif;
-	src: url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400&display=swap");
+  font-family: "Raleway", sans-serif;
+  src: url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400&display=swap");
 }
 
 @font-face {
-	font-family: "Source Sans Pro", sans-serif;
-	src: url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400&display=swap");
+  font-family: "Source Sans Pro", sans-serif;
+  src: url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400&display=swap");
 }
 
 @font-face {
-	font-family: "Roboto", sans-serif;
-	font-family: "Roboto Slab", serif;
-	src: url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:ital,wght@0,400;0,500;1,400&display=swap");
+  font-family: "Roboto", sans-serif;
+  font-family: "Roboto Slab", serif;
+  src: url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&family=Roboto:ital,wght@0,400;0,500;1,400&display=swap");
 }
 
 @font-face {
-	font-family: "Source Sans Pro", sans-serif;
-	src: url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;1,400&display=swap");
+  font-family: "Source Sans Pro", sans-serif;
+  src: url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;1,400&display=swap");
 }
 
 * {
-	font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 /* Make carousel indicator rounded */
 .carousel-indicators li {
-	width: 10px;
-	height: 10px;
-	border-radius: 100%;
+  width: 10px !important;
+  height: 10px !important;
+  border-radius: 100%;
 }
 
 .carousel-indicators .active {
-	background-color: var(--deepViolet);
+  background-color: #f26101;
+}
+
+.carousel-control-prev-icon {
+  margin-right: auto;
+}
+
+.carousel-control-next-icon {
+  margin-left: auto;
+}
+
+.carousel-control-next-icon,
+.carousel-control-prev-icon {
+  display: inline-block;
+  background: transparent no-repeat center center;
+  background-size: 100% 100%;
+  height: 2rem !important;
+  width: 2rem !important;
+}
+
+.carousel-control-next:hover,
+	.carousel-control-prev:hover /*, .carousel-indicators */ {
+  filter: invert(100%);
 }
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-	-webkit-appearance: none;
-	margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 /* Firefox */
 input[type="number"] {
-	-moz-appearance: textfield;
+  -moz-appearance: textfield;
 }
 
 .unselectable {
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.item-name {
+  color: #283657;
+  font-weight: bold;
+  font-size: 1.8rem;
+}
+
+.see--rate {
+  font-size: 1.1rem;
+  color: rgb(74, 144, 226) !important;
+  text-decoration: none !important;
+  padding-bottom: 1rem;
+  font-weight: bold;
+}
+
+.price--secsion {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.new-price {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.old-price {
+  padding: 0 0.5rem;
+  font-size: 1.1rem;
+  text-decoration: line-through;
+  color: rgb(100, 100, 100);
+}
+
+.sale-percent {
+  color: #f26101;
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+
+.choose-size,
+.choose-amount {
+  padding: 0.5rem 0;
 }
 
 .decrease-one,
 .amount,
 .increase-one {
-	display: inline-block;
-	width: 2.5rem;
-	height: 2.5rem;
-	line-height: 2.5rem;
+  display: inline-block !important;
+  width: 2.5rem !important;
+  height: 2.5rem !important;
+  line-height: 2.5rem !important;
 
-	text-align: center;
+  text-align: center;
+  font-size: 1.5rem;
 
-	font-family: "Raleway", sans-serif;
-	font-weight: bold;
-	font-size: 1.5rem;
-
-	border-style: solid;
-	border-color: var(--softOrage);
-	border-width: 1px;
+  border-style: solid !important;
+  border-color: rgb(120, 120, 120) !important;
+  border-width: 1px !important;
+  border-radius: 0 !important;
+  padding: 0 0 !important;
 }
 
 .amount {
-	width: 3.7rem;
+  width: 3.5rem !important;
 }
 
 .decrease-one:hover,
 .increase-one:hover {
-	background-color: var(--softOrage);
-	cursor: pointer;
-}
-
-.price {
-	font-family: "Raleway", sans-serif;
-	font-size: 1.5rem;
-}
-
-.item-name {
-	color: var(--darkBlue);
-	font-family: "Montserrat", sans-serif;
-	font-weight: bold;
-	font-size: x-large;
-}
-
-.tittle-text {
-	font-weight: 500;
-	text-decoration: underline;
+  background-color: rgba(200, 200, 200, 0.2);
+  cursor: pointer;
 }
 
 .option {
-	text-transform: uppercase;
-	text-align: center;
-	font-size: 1rem;
-	font-weight: bold;
-	color: var(--softOrage);
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: bold;
+  color: #f26101;
 
-	/* height: 3rem; */
+  /* height: 3rem; */
 
-	border-style: solid;
-	border-color: var(--softOrage);
-	border-width: 2px;
-	border-radius: 5px;
+  border-style: solid;
+  border-color: #f26101;
+  border-width: 2px;
+  border-radius: 0;
 }
 
 .option:hover {
-	color: white;
-	background-color: var(--softOrage);
-	cursor: pointer;
-}
-
-.description-text {
-	/* height: 8rem; */
-	white-space: normal;
-	overflow-x: hidden;
-
-	/* border-style: solid; */
-	/* border-color: var(--lightTomato); */
-	/* border-width: 2px; */
+  color: white;
+  background-color: #f26101;
+  cursor: pointer;
 }
 
 .add-to-cart {
-	font-family: "Roboto Slab", serif;
-	font-weight: bold;
-	color: white;
+  margin-top: 2rem !important;
+  font-weight: bold;
+  color: white !important;
 
-	text-transform: uppercase;
-	background-color: var(--deepViolet);
+  text-transform: uppercase;
+  background-color: black !important;
+  border-radius: 0 !important;
+}
+
+.des-title,
+.rate-title {
+  font-size: 1.3rem;
+  padding: 0.5rem 0 1rem 0;
+  font-weight: bold;
+}
+
+#form-write-rate {
+  display: none;
+}
+
+.form-rate .btn-write-rate,
+.form-rate .send-rate {
+  margin: 0.5rem 0;
+  color: #f26101;
+  background-color: white;
+  border-radius: 0;
+  border: solid 1px #f26101;
+}
+
+textarea {
+  resize: none !important;
+}
+
+.form-rate label {
+  color: #f26101;
+  font-size: 0.9rem;
+}
+
+.form-rate .send-rate {
+  justify-self: flex-end;
+  align-self: flex-end;
+}
+
+.form-rate .btn-write-rate:hover,
+.form-rate .send-rate:hover {
+  color: white;
+  background-color: black;
+  border-radius: 0;
+  border: solid 1px black;
 }
