--- a/views/index.hbs
+++ b/views/index.hbs
@@ -72,7 +72,7 @@
 			<div class="carousel-inner" role="listbox">
 				<div class="carousel-item active">
 					<div class="row">
-						{{#each data.[0]}}
+						{{#each TopProduct.[0]}}
 						<div class="col-6 col-lg-3 item-product">
 							<a href="/list-product/item?id={{this.id}}">
 								<img class="mb-2" src="{{ this.imageThumbnail }}" alt="1" width="100%;" />
@@ -88,7 +88,7 @@
 				</div>
 				<div class="carousel-item">
 					<div class="row">
-						{{#each data.[1]}}
+						{{#each TopProduct.[1]}}
 						<div class="col-6 col-lg-3 item-product">
 							<a href="/list-product/item?id={{this.id}}">
 								<img class="mb-2" src="{{ this.imageThumbnail }}" alt="1" width="100%;" />
@@ -104,7 +104,7 @@
 				</div>
 				<div class="carousel-item">
 					<div class="row">
-						{{#each data.[2]}}
+						{{#each TopProduct.[2]}}
 						<div class="col-6 col-lg-3 item-product">
 							<a href="/list-product/item?id={{this.id}}">
 								<img class="mb-2" src="{{ this.imageThumbnail }}" alt="1" width="100%;" />
