--- a/views/layouts/shop-cart-layout.hbs
+++ b/views/layouts/shop-cart-layout.hbs
@@ -41,7 +41,7 @@
                             <textarea class="form-control my-3" name="" id="" rows="6" placeholder="Notes"></textarea>
 
                             <div>
-                                <div class="tittle-text my-2">
+                                <div class="tittle-text my-2 form-tittle">
                                     Payment Method: 
                                 </div>
                                 <div class="d-flex justify-content-center align-items-center">
@@ -86,6 +86,12 @@
 
                     {{{body}}}
 
+                    <div class="d-flex justify-content-between mt-2">
+                        <div class="form-tittle">TOTAL:</div>
+                        <div class="d-flex">
+                            <div class="total-price">0</div>đ
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
