--- a/views/product-item.hbs
+++ b/views/product-item.hbs
@@ -102,7 +102,31 @@
 
 
 
-			<button type="button"
+			
+			<!-- Modal -->
+			<div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modelTitleId" aria-hidden="true">
+				<div class="modal-dialog" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h5 class="modal-title">Giỏ hàng</h5>
+								<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+						</div>
+						<div class="modal-body">
+							Đã thêm vào giỏ hàng
+						</div>
+						<div class="modal-footer">
+							<a href="/shopping-cart">
+								<button type="button" class="btn btn-secondary">Xem giỏ hàng</button>
+							</a>
+							
+							<button type="button" class="btn btn-primary" data-dismiss="modal">Tiếp tục mua sắm</button>
+						</div>
+					</div>
+				</div>
+			</div>
+			<button type="button" data-toggle="modal" data-target="#modal"
 				class="btn btn-lg btn-block add-to-cart d-flex justify-content-center align-items-center">
 				Thêm vào giỏ hàng
 				<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-cart3"
