--- a/views/shop-cart.hbs
+++ b/views/shop-cart.hbs
@@ -1,27 +1,26 @@
-{{#with bill}}
+{{!-- {{#with bill}} --}}
 <div class="chosen-item-div">
-	{{#each billItems}}
-	{{#with item}}
-	<div class="item-div row p-3 m-2" id="{{ id }}">
+	{{!-- {{#each billItems}}
+	{{#with item}} --}}
+	<div class="item-div row p-3 m-2" style="display: none;">
 		<div class="col-md-6 col-sm-12">
-			<img class="w-100" src="{{ imageThumbnail }}" />
+			<img class="w-100 thumbnail" src="" />
 		</div>
 
 		<div class="col-md-6 col-sm-12">
 			<div class="w-100">
-				<div class="item-name text-md-right text-center">{{ name }}</div>
+				<div class="item-name text-md-right text-center"></div>
 			</div>
 
 			<div class="d-flex flex-md-column justify-content-between">
 				<div class="d-flex justify-content-end">
-					<div class="price">{{ price }}</div>
-					đ
+					<div class="price">0</div> đ
 				</div>
-				{{/with}}
+	{{!-- {{/with}} --}}
 				<div class="d-flex justify-content-end mt-1">
 					<div class="decrease-one unselectable">-</div>
 					<div>
-						<input class="amount" type="text" value="{{ amount }}" />
+						<input class="amount" type="number" value=0 />
 					</div>
 					<div class="increase-one unselectable">+</div>
 				</div>
@@ -29,14 +28,8 @@
 		</div>
 	</div>
 
-	{{/each}}
+	{{!-- {{/each}} --}}
 </div>
 
-<div class="d-flex justify-content-between mt-2">
-	<div class="form-tittle">TOTAL:</div>
-	<div class="d-flex">
-		<div class="total-price">{{ totalPrice }}</div>
-		đ
-	</div>
-</div>
-{{/with}}
+
+{{!-- {{/with}} --}}
