Sign-up Sign-in with passportjs

--- a/Views/sign-up.hbs
+++ b/Views/sign-up.hbs
@@ -1,73 +1,114 @@
 <!-- Body -->
 <div class="body-content container">
+	<!-- Header Body -->
+	<div class="page-header mx-auto">
+		<div class="container">
+			<div class="page-header__content text-center">
+				<h1
+					class="page-header__title signup-title text-center"
+					style="color: #283657"
+				>
+					ĐĂNG KÝ TÀI KHOẢN
+				</h1>
+				<p style="font-size: 1.2rem">
+					Chào mừng bạn đến với Store của chúng tôi<br />
+					Vui lòng đăng ký để trở thành thành viên của gia đình USG
+				</p>
+			</div>
+		</div>
+	</div>
 
-    <!-- Header Body -->
-    <div class="page-header mx-auto">
-        <div class="container">
-            <div class="page-header__content text-center">
-                <h1 class="page-header__title signup-title text-center" style="color: #283657;">
-                    ĐĂNG KÝ TÀI KHOẢN
-                </h1>
-                <p style="font-size: 1.2rem;">
-                    Chào mừng bạn đến với Store của chúng tôi<br>
-                    Vui lòng đăng ký để trở thành thành viên của gia đình USG
-                </p>
-            </div>
-        </div>
-    </div>
+	<!-- Sign up Form -->
+	<div class="form-signup container px-0">
+		<div class="container px-0">
+			<form class="needs-validation" novalidate method="POST" action="/sign-up">
+				<div class="form-group">
+					<label for="uname">TÊN ĐĂNG NHẬP:</label>
+					<input
+						type="text"
+						class="form-control"
+						id="uname"
+						placeholder="TÊN ĐĂNG NHẬP"
+						name="username"
+						required
+					/>
+					<div class="valid-feedback"></div>
+					<div class="invalid-feedback">Vui lòng điền Tên đăng nhập</div>
+				</div>
 
-    <!-- Login Form -->
-    <div class="form-signup container px-0">
-        <div class="container px-0">
-            <form class="needs-validation" novalidate method="POST" action=" ">
+				<div class="form-group">
+					<label for="name">HỌ TÊN:</label>
+					<input
+						type="text"
+						class="form-control"
+						id="name"
+						placeholder="HỌ TÊN"
+						name="name"
+						required
+					/>
+					<div class="valid-feedback"></div>
+					<div class="invalid-feedback">Vui lòng điền Họ tên của bạn</div>
+				</div>
 
-                <div class="form-group">
-                    <label for="uname">TÊN ĐĂNG NHẬP:</label>
-                    <input type="text" class="form-control" id="uname" placeholder="TÊN ĐĂNG NHẬP" name="uname"
-                        required />
-                    <div class="valid-feedback"></div>
-                    <div class="invalid-feedback">Vui lòng điền Tên đăng nhập</div>
-                </div>
+				<div class="form-group">
+					<label for="phone">ĐIỆN THOẠI:</label>
+					<input
+						type="tel"
+						class="form-control"
+						id="phone"
+						placeholder="ĐIỆN THOẠI"
+						name="phone"
+						required
+					/>
+					<div class="valid-feedback"></div>
+					<div class="invalid-feedback">
+						Vui lòng điền Số điện thoại của bạn
+					</div>
+				</div>
 
-                <div class="form-group">
-                    <label for="name">HỌ TÊN:</label>
-                    <input type="text" class="form-control" id="name" placeholder="HỌ TÊN" name="name" required />
-                    <div class="valid-feedback"></div>
-                    <div class="invalid-feedback">Vui lòng điền Họ tên của bạn</div>
-                </div>
+				<div class="form-group">
+					<label for="email">EMAIL CỦA BẠN:</label>
+					<input
+						type="email"
+						class="form-control"
+						id="email"
+						placeholder="TÀI KHOẢN EMAIL"
+						name="email"
+						required
+					/>
+					<div class="valid-feedback"></div>
+					<div class="invalid-feedback">Vui lòng điền Email của bạn</div>
+				</div>
 
-                <div class="form-group">
-                    <label for="phone">ĐIỆN THOẠI:</label>
-                    <input type="tel" class="form-control" id="phone" placeholder="ĐIỆN THOẠI" name="phone" required />
-                    <div class="valid-feedback"></div>
-                    <div class="invalid-feedback">Vui lòng điền Số điện thoại của bạn</div>
-                </div>
-
-                <div class="form-group">
-                    <label for="email">EMAIL CỦA BẠN:</label>
-                    <input type="email" class="form-control" id="email" placeholder="TÀI KHOẢN EMAIL" name="email"
-                        required />
-                    <div class="valid-feedback">f</div>
-                    <div class="invalid-feedback">Vui lòng điền Email của bạn</div>
-                </div>
-
-                <div class="form-group">
-                    <label for="pwd">MẬT KHẨU:</label>
-                    <input type="password" class="form-control" id="pwd" placeholder="MẬT KHẨU" name="pswd"
-                        autocomplete="off" required />
-                    <div class="valid-feedback">f</div>
-                    <div class="invalid-feedback">Vui lòng điền Mật khẩu</div>
-                </div>
-
-                <div class="container btn-group-signup d-flex flex-column justify-content-center align-items-center">
-                    <button type="submit" class="btn signup rounded-0">ĐĂNG KÝ</button>
-                    <p class="py-0 my-2">Hoặc</p>
-                    <a name="" id="" class="btn login rounded-0" href="login.htm" role="button">ĐĂNG NHẬP</a>
-                </div>
-
-            </form>
-
-        </div>
-    </div>
-
+				<div class="form-group">
+					<label for="pwd">MẬT KHẨU:</label>
+					<input
+						type="password"
+						class="form-control"
+						id="pwd"
+						placeholder="MẬT KHẨU"
+						name="password"
+						autocomplete="off"
+						required
+					/>
+					<div class="valid-feedback"></div>
+					<div class="invalid-feedback">Vui lòng điền Mật khẩu</div>
+				</div>
+				<div
+					class="container btn-group-signup d-flex flex-column justify-content-center align-items-center"
+				>
+					<button type="submit" class="btn signup rounded-0">ĐĂNG KÝ</button>
+					<p class="py-0 my-2">Hoặc</p>
+					<a
+						name=""
+						id=""
+						class="btn login rounded-0"
+						href="login"
+						role="button"
+						>ĐĂNG NHẬP</a
+					>
+				</div>
+			</form>
+		</div>
+	</div>
 </div>
