--- a/views/partials/footer-part.hbs
+++ b/views/partials/footer-part.hbs
@@ -1,82 +1,93 @@
 <!-- Secsion Footer -->
-<div class="footer" style="overflow-x: hidden;">
+<div class="footer" style="overflow-x: hidden">
+	<hr class="separate-infor--small-screen" />
+	<div class="container-fuild">
+		<div class="footer-contact container">
+			<div class="row d-flex justify-content-center align-items-center p-0 m-0">
+				<div class="col-sm-12 col-lg-6 phone">
+					<p>GỌI MUA HÀNG, HỖ TRỢ (7:30 - 21:30)</p>
+					<p>
+						<i class="fas fa-phone-alt"></i>
+						<span>1900.XXX.XXX</span>
+					</p>
+				</div>
 
-    <hr class="separate-infor--small-screen">
-    <div class="container-fuild">
+				<div class="col-sm-12 col-lg-6 text-sm-center text-lg-right social">
+					<p>LIKE USG VÀ NHẬN KHUYẾN MÃI HẤP DẪN MỖI NGÀY</p>
+					<div class="icon--contact">
+						<a href="https://www.facebook.com/"
+							><i class="fab fa-facebook-square"></i
+						></a>
+						<a href="https://www.youtube.com/"
+							><i class="fab fa-youtube"></i
+						></a>
+						<a href="https://www.instagram.com/"
+							><i class="fab fa-instagram-square"></i
+						></a>
+					</div>
+				</div>
+			</div>
+		</div>
 
+		<!-- Meta Infor For Large Screen-->
+		<div class="footer-menu large py-1">
+			<div class="row justify-content-center align-items-center">
+				<ul style="list-style-type: none" class="py-0 my-0 py-1">
+					<li><a href="#">Hướng dẫn mua hàng</a>|</li>
+					<li><a href="#">Hướng dẫn chọn size</a>|</li>
+					<li><a href="#">Chính sách đổi trả</a>|</li>
+					<li><a href="#">Chính sách bảo mật và điều khoản</a>|</li>
+					<li id="last"><a href="#">Tuyển dụng</a></li>
+				</ul>
+			</div>
+		</div>
 
-        <div class="footer-contact container">
-            <div class="row d-flex justify-content-center align-items-center p-0 m-0">
-                <div class="col-sm-12 col-lg-6 phone">
-                    <p>GỌI MUA HÀNG, HỖ TRỢ (7:30 - 21:30)</p>
-                    <p>
-                        <i class="fas fa-phone-alt"></i>
-                        <span>1900.XXX.XXX</span>
-                    </p>
-                </div>
+		<!-- Footer infor -->
+		<div class="footer-infor container">
+			<div class="row d-flex justify-content-center align-items-center p-0 m-0">
+				<div class="col-sm-12 col-lg-6 footer--infor--title">
+					<h6>UNIVERSAL SIMPLISTIC GROCERY</h6>
+					<p>
+						Mã số doanh nghiệp: 0123 456 789. <br />
+						Giấy chứng chận đăng ký doanh nghiệp do Cục XXX cấp vào ngày DD / MM
+						/ YYYY.
+					</p>
+				</div>
 
-                <div class="col-sm-12 col-lg-6 text-sm-center text-lg-right social">
-                    <p>LIKE USG VÀ NHẬN KHUYẾN MÃI HẤP DẪN MỖI NGÀY</p>
-                    <div class="icon--contact">
-                        <a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
-                        <a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
-                        <a href="https://www.instagram.com/"><i class="fab fa-instagram-square"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
+				<div class="d-none d-sm-none d-lg-block col-lg-2 footer--certi--lg">
+					<img
+						src="resources/img/certificate/certificate.png"
+						alt=""
+						width="100%"
+						height="auto"
+					/>
+				</div>
 
+				<div class="col-sm-12 col-lg-4 footer--infor--address">
+					<p>
+						Chi nhánh Linh Trung: <br />
+						Quận Thủ Đức, TP Hồ Chí Minh <br />
+						Điện thoại: (84.8) 38 962.823 - 38 967.366 <br />
+					</p>
+					<p>
+						Chi nhánh Tp HCM: <br />
+						227, Nguyễn Văn Cừ, Quận 5, TP Hồ Chí Minh <br />
+						Điện thoại: (84.8) 38 353.193
+					</p>
+				</div>
 
-        <!-- Meta Infor For Large Screen-->
-        <div class="footer-menu large py-1">
-            <div class="row justify-content-center align-items-center">
-                <ul style="list-style-type:none" class="py-0 my-0 py-1">
-                    <li><a href="#">Hướng dẫn mua hàng</a>|</li>
-                    <li><a href="#">Hướng dẫn chọn size</a>|</li>
-                    <li><a href="#">Chính sách đổi trả</a>|</li>
-                    <li><a href="#">Chính sách bảo mật và điều khoản</a>|</li>
-                    <li id="last"><a href="#">Tuyển dụng</a></li>
-                </ul>
-            </div>
-        </div>
-
-
-        <!-- Footer infor -->
-        <div class="footer-infor container">
-
-            <div class="row d-flex justify-content-center align-items-center p-0 m-0">
-
-                <div class="col-sm-12 col-lg-6 footer--infor--title">
-                    <h6>UNIVERSAL SIMPLISTIC GROCERY</h6>
-                    <p>
-                        Mã số doanh nghiệp: 0123 456 789. <br>
-                        Giấy chứng chận đăng ký doanh nghiệp do Cục XXX cấp vào ngày DD / MM / YYYY.
-                    </p>
-                </div>
-
-                <div class="d-none d-sm-none d-lg-block col-lg-2 footer--certi--lg">
-                    <img src="resources/img/certificate/certificate.png" alt="" width="100%" height="auto">
-                </div>
-
-                <div class="col-sm-12 col-lg-4  footer--infor--address">
-                    <p>
-                        Chi nhánh Linh Trung: <br> Quận Thủ Đức, TP Hồ Chí Minh <br>
-                        Điện thoại: (84.8) 38 962.823 - 38 967.366 <br>
-                    </p>
-                    <p>
-                        Chi nhánh Tp HCM: <br> 227, Nguyễn Văn Cừ, Quận 5, TP Hồ Chí Minh <br>
-                        Điện thoại: (84.8) 38 353.193
-                    </p>
-                </div>
-
-                <div class="d-sm-flex col-sm-3 d-lg-none footer--certi--sm justify-content-center">
-                    <img src="resources/img/certificate/certificate.png" alt="" width="40%" height="auto">
-                </div>
-
-            </div>
-
-        </div>
-
-    </div>
-
+				<div
+					class="d-sm-flex col-sm-3 d-lg-none footer--certi--sm justify-content-center"
+				>
+					<img
+						class="cert-img"
+						src="./resources/img/certificate/certificate.png"
+						alt=""
+						width="40%"
+						height="auto"
+					/>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
