--- a/views/information.hbs
+++ b/views/information.hbs
@@ -1,200 +1,292 @@
 <!-- Body -->
 <div class="body-content container">
-    <div class="row w-100 mx-0">
+	<div class="row w-100 mx-0">
+		<div class="col-12 col-lg-3 infor-nav-menu">
+			<div class="jumbotron">
+				<div
+					class="container w-100 p-0 d-flex flex-column justify-content-center align-items-center"
+				>
+					<p class="member rounded shadow">USG Member</p>
+					<p class="name">Dương Tấn Phát</p>
 
-        <div class="col-12 col-lg-3 infor-nav-menu">
-            <div class="jumbotron">
-                <div class="container w-100 p-0 d-flex flex-column justify-content-center align-items-center">
-                    <p class="member rounded shadow">USG Member</p>
-                    <p class="name">Dương Tấn Phát</p>
+					<ul class="infor-menu">
+						<li>
+							<a href="#" class="active">
+								<i class="fas fa-user"></i>
+								Thông tin cá nhân
+							</a>
+						</li>
 
-                    <ul class="infor-menu">
+						<li>
+							<a href="#">
+								<i class="fas fa-file-invoice"></i>
+								Danh sách đơn hàng
+							</a>
+						</li>
 
-                        <li>
-                            <a href="#" class="active">
-                                <i class="fas fa-user"></i>
-                                Thông tin cá nhân
-                            </a>
-                        </li>
+						<li>
+							<a href="/logout">
+								<i class="fas fa-sign-out-alt"></i>
+								Đăng xuất
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
 
-                        <li>
-                            <a href="#">
-                                <i class="fas fa-file-invoice"></i>
-                                Danh sách đơn hàng
-                            </a>
-                        </li>
+		<div class="col-12 col-lg-9 infor-form">
+			<div class="form-infor container px-0">
+				<h3 style="color: #283657">THÔNG TIN TÀI KHOẢN</h3>
+				<div class="container px-0">
+					<form action="" class="needs-validation" novalidate>
+						<div class="row form-group">
+							<div class="col-3 p-0 d-flex align-items-center">
+								<label for="name">Họ Tên</label>
+							</div>
+							<div class="col-9 p-0">
+								<input
+									type="text"
+									class="form-control rounded-0"
+									id="name"
+									value="Dương Tấn Phát"
+									name="name"
+								/>
+							</div>
+						</div>
 
-                        <li>
-                            <a href="#">
-                                <i class="fas fa-sign-out-alt"></i>
-                                Đăng xuất
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+						<div class="row form-group">
+							<div class="col-3 p-0 d-flex align-items-center">
+								<label for="email">Email</label>
+							</div>
+							<div class="col-9 p-0">
+								<input
+									type="email"
+									class="form-control rounded-0"
+									id="email"
+									value="beebapcay@gmail.com"
+									name="email"
+									disabled
+								/>
+							</div>
+						</div>
 
-        <div class="col-12 col-lg-9 infor-form">
-            <div class="form-infor container px-0">
-                <h3 style="color: #283657;">THÔNG TIN TÀI KHOẢN</h3>
-                <div class="container px-0">
-                    <form action="" class="needs-validation" novalidate>
+						<div class="row form-group">
+							<div class="col-3 p-0 d-flex align-items-center">
+								<label for="phone">Số Điện Thoại</label>
+							</div>
+							<div class="col-9 p-0">
+								<input
+									type="phone"
+									class="form-control rounded-0"
+									id="phone"
+									value="0964746011"
+									name="phone"
+								/>
+							</div>
+						</div>
 
-                        <div class="row form-group">
-                            <div class="col-3 p-0 d-flex align-items-center">
-                                <label for="name">Họ Tên</label>
-                            </div>
-                            <div class="col-9 p-0">
-                                <input type="text" class="form-control rounded-0" id="name" value="Dương Tấn Phát"
-                                    name="name" />
-                            </div>
-                        </div>
+						<div class="row form-group">
+							<div class="col-3 p-0 d-flex align-items-center">
+								<label for="uname">Tên Đăng Nhập</label>
+							</div>
+							<div class="col-9 p-0">
+								<input
+									type="text"
+									class="form-control rounded-0"
+									id="uname"
+									value="beebapcay"
+									name="uname"
+									disabled
+								/>
+							</div>
+						</div>
 
-                        <div class="row form-group">
-                            <div class="col-3 p-0 d-flex align-items-center">
-                                <label for="email">Email</label>
-                            </div>
-                            <div class="col-9 p-0">
-                                <input type="email" class="form-control rounded-0" id="email"
-                                    value="beebapcay@gmail.com" name="email" disabled />
-                            </div>
-                        </div>
+						<div class="row form-group">
+							<div class="col-3 p-0 d-flex align-items-center">
+								<label for="address">Địa Chỉ</label>
+							</div>
+							<div class="col-9 p-0">
+								<input
+									type="text"
+									class="form-control rounded-0"
+									id="address"
+									value="423/34/20 Lạc Long Quân, phường 5, quận 11, HCM"
+									name="address"
+								/>
+							</div>
+						</div>
 
-                        <div class="row form-group">
-                            <div class="col-3 p-0 d-flex align-items-center">
-                                <label for="phone">Số Điện Thoại</label>
-                            </div>
-                            <div class="col-9 p-0">
-                                <input type="phone" class="form-control rounded-0" id="phone" value="0964746011"
-                                    name="phone" />
-                            </div>
-                        </div>
+						<div class="row form-group">
+							<div class="col-3 p-0 d-flex align-items-center">
+								<label for="dob">Ngày Sinh</label>
+							</div>
+							<div class="col-9 p-0">
+								<input
+									type="date"
+									class="form-control rounded-0"
+									id="dob"
+									value="2000-01-11"
+									name="dob"
+								/>
+							</div>
+						</div>
 
-                        <div class="row form-group">
-                            <div class="col-3 p-0 d-flex align-items-center">
-                                <label for="uname">Tên Đăng Nhập</label>
-                            </div>
-                            <div class="col-9 p-0">
-                                <input type="text" class="form-control rounded-0" id="uname" value="beebapcay"
-                                    name="uname" disabled />
-                            </div>
-                        </div>
+						<div class="row form-group">
+							<div class="col-3 p-0 d-flex align-items-center">
+								<label>Giới Tính</label>
+							</div>
+							<div class="col-9 p-0">
+								<div class="custom-control custom-radio custom-control-inline">
+									<input
+										type="radio"
+										class="custom-control-input"
+										id="sex-male"
+										name="sex"
+										value="male"
+										checked
+									/>
+									<label class="custom-control-label" for="sex-male">Nam</label>
+								</div>
+								<div class="custom-control custom-radio custom-control-inline">
+									<input
+										type="radio"
+										class="custom-control-input"
+										id="sex-female"
+										name="sex"
+										value="female"
+									/>
+									<label class="custom-control-label" for="sex-female"
+										>Nữ</label
+									>
+								</div>
+							</div>
+						</div>
 
-                        <div class="row form-group">
-                            <div class="col-3 p-0 d-flex align-items-center">
-                                <label for="address">Địa Chỉ</label>
-                            </div>
-                            <div class="col-9 p-0">
-                                <input type="text" class="form-control rounded-0" id="address"
-                                    value="423/34/20 Lạc Long Quân, phường 5, quận 11, HCM" name="address" />
-                            </div>
-                        </div>
+						<div class="row form-group">
+							<div class="col-3 p-0 d-flex align-items-center">
+								<label for="height">Chiều Cao</label>
+							</div>
+							<div class="col-8 p-0">
+								<input
+									type="range"
+									class="custom-range"
+									id="height"
+									name="weight"
+									min="0"
+									max="300"
+									value="172"
+									onchange="changeValueHeight(this)"
+								/>
+							</div>
+							<div
+								class="col-1 p-0 d-flex align-items-center justify-content-end"
+							>
+								<p class="m-0 p-0" id="value-height">172</p>
+								<span id="unit">cm</span>
+							</div>
+						</div>
 
-                        <div class="row form-group">
-                            <div class="col-3 p-0 d-flex align-items-center">
-                                <label for="dob">Ngày Sinh</label>
-                            </div>
-                            <div class="col-9 p-0">
-                                <input type="date" class="form-control rounded-0" id="dob" value="2000-01-11"
-                                    name="dob" />
-                            </div>
-                        </div>
+						<div class="row form-group">
+							<div class="col-3 p-0 d-flex align-items-center">
+								<label for="weight">Cân Nặng</label>
+							</div>
+							<div class="col-8 p-0">
+								<input
+									type="range"
+									class="custom-range"
+									id="weight"
+									name="weight"
+									min="0"
+									max="200"
+									value="60"
+									onchange="changeValueWeight(this)"
+								/>
+							</div>
+							<div
+								class="col-1 p-0 d-flex align-items-center justify-content-end"
+							>
+								<p class="m-0 p-0" id="value-weight">60</p>
+								<span id="unit">kg</span>
+							</div>
+						</div>
 
-                        <div class="row form-group">
-                            <div class="col-3 p-0 d-flex align-items-center">
-                                <label>Giới Tính</label>
-                            </div>
-                            <div class="col-9 p-0">
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" class="custom-control-input" id="sex-male" name="sex"
-                                        value="male" checked>
-                                    <label class="custom-control-label" for="sex-male">Nam</label>
-                                </div>
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" class="custom-control-input" id="sex-female" name="sex"
-                                        value="female">
-                                    <label class="custom-control-label" for="sex-female">Nữ</label>
-                                </div>
-                            </div>
-                        </div>
+						<div class="form-group">
+							<label class="change-pwd-label" for="change_pwd"
+								>Thay Đổi Mật Khẩu</label
+							>
+							<input
+								type="checkbox"
+								name="change_pwd"
+								id="change_pwd"
+								onclick="clickChangePwdHandler(this)"
+							/>
+						</div>
 
-                        <div class="row form-group">
-                            <div class="col-3 p-0 d-flex align-items-center">
-                                <label for="height">Chiều Cao</label>
-                            </div>
-                            <div class="col-8 p-0">
-                                <input type="range" class="custom-range" id="height" name="weight" min="0" max="300"
-                                    value="172" onchange="changeValueHeight(this)">
-                            </div>
-                            <div class="col-1 p-0 d-flex align-items-center justify-content-end">
-                                <p class="m-0 p-0" id="value-height">172</p><span id="unit">cm</span>
-                            </div>
-                        </div>
+						<div class="change-pwd-group" id="change-pwd-group">
+							<div class="row form-group">
+								<div class="col-3 p-0 d-flex align-items-center">
+									<label for="old-pwd">Mật Khẩu Cũ</label>
+								</div>
+								<div class="col-9 p-0">
+									<input
+										type="password"
+										class="form-control rounded-0"
+										value=""
+										id="old-pwd"
+										name="old-pwd"
+										required
+									/>
+									<div class="valid-feedback"></div>
+									<div class="invalid-feedback">Vui lòng điền Mật khẩu Cũ</div>
+								</div>
+							</div>
 
-                        <div class="row form-group">
-                            <div class="col-3 p-0 d-flex align-items-center">
-                                <label for="weight">Cân Nặng</label>
-                            </div>
-                            <div class="col-8 p-0">
-                                <input type="range" class="custom-range" id="weight" name="weight" min="0" max="200"
-                                    value="60" onchange="changeValueWeight(this)">
-                            </div>
-                            <div class="col-1 p-0 d-flex align-items-center justify-content-end">
-                                <p class="m-0 p-0" id="value-weight">60</p><span id="unit">kg</span>
-                            </div>
-                        </div>
+							<div class="row form-group">
+								<div class="col-3 p-0 d-flex align-items-center">
+									<label for="new-pwd">Mật Khẩu Mới</label>
+								</div>
+								<div class="col-9 p-0">
+									<input
+										type="password"
+										class="form-control rounded-0"
+										id="new-pwd"
+										value=""
+										name="new-pwd"
+										required
+									/>
+									<div class="valid-feedback"></div>
+									<div class="invalid-feedback">Vui lòng điền Mật khẩu Mới</div>
+								</div>
+							</div>
 
+							<div class="row form-group">
+								<div class="col-3 p-0 d-flex align-items-center">
+									<label for="new-pwd-confirm">Nhập Lại Mật Khẩu Mới</label>
+								</div>
+								<div class="col-9 p-0">
+									<input
+										type="password"
+										class="form-control rounded-0"
+										id="new-pwd-confirm"
+										value=""
+										name="new-pwd-confirm"
+										required
+									/>
+									<div class="valid-feedback"></div>
+									<div class="invalid-feedback">
+										Vui lòng nhập lại Mật Khẩu Mới
+									</div>
+								</div>
+							</div>
+						</div>
 
-                        <div class="form-group">
-                            <label class="change-pwd-label" for="change_pwd">Thay Đổi Mật Khẩu</label>
-                            <input type="checkbox" name="change_pwd" id="change_pwd"
-                                onclick="clickChangePwdHandler(this)">
-                        </div>
-
-                        <div class="change-pwd-group" id="change-pwd-group">
-                            <div class="row form-group">
-                                <div class="col-3 p-0 d-flex align-items-center">
-                                    <label for="old-pwd">Mật Khẩu Cũ</label>
-                                </div>
-                                <div class="col-9 p-0">
-                                    <input type="password" class="form-control rounded-0" value="" id="old-pwd"
-                                        name="old-pwd" required />
-                                    <div class="valid-feedback"></div>
-                                    <div class="invalid-feedback">Vui lòng điền Mật khẩu Cũ</div>
-                                </div>
-                            </div>
-
-                            <div class="row form-group">
-                                <div class="col-3 p-0 d-flex align-items-center">
-                                    <label for="new-pwd">Mật Khẩu Mới</label>
-                                </div>
-                                <div class="col-9 p-0">
-                                    <input type="password" class="form-control rounded-0" id="new-pwd" value=""
-                                        name="new-pwd" required />
-                                    <div class="valid-feedback"></div>
-                                    <div class="invalid-feedback">Vui lòng điền Mật khẩu Mới</div>
-                                </div>
-                            </div>
-
-                            <div class="row form-group">
-                                <div class="col-3 p-0 d-flex align-items-center">
-                                    <label for="new-pwd-confirm">Nhập Lại Mật Khẩu Mới</label>
-                                </div>
-                                <div class="col-9 p-0">
-                                    <input type="password" class="form-control rounded-0" id="new-pwd-confirm" value=""
-                                        name="new-pwd-confirm" required />
-                                    <div class="valid-feedback"></div>
-                                    <div class="invalid-feedback">Vui lòng nhập lại Mật Khẩu Mới</div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <button type="submit" class="btn update-acc rounded-0 d-block">CẬP NHẬT TÀI KHOẢN</button>
-
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
+						<button type="submit" class="btn update-acc rounded-0 d-block">
+							CẬP NHẬT TÀI KHOẢN
+						</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
